# PersonalWebsiteSphinx

./: .gitignore  README.md  pyproject.toml
source/: conf.py  index.md
source/optimization_tutorials/: Optimization.md  homogenous_linear_least_squares.md
source/tutorials/: tutorials.md
