[tool.poetry]
name = "personalwebsitesphinx"
version = "0.1.0"
description = "Adi's personal website"
authors = ["Adithya Yerramsetty <adithya.yerramsetty@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^1.0.0"
sphinx-design = "^0.3.0"
furo = "^2022.12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
