[tool.poetry]
name = "personalwebsitesphinx"
version = "0.1.0"
description = "Adi's personal website"
authors = ["Adithya Yerramsetty <adithya.yerramsetty@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^6.1.3"
furo = "^2023.3.23"
sphinx-sitemap = "^2.5.0"
myst-parser = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
